--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>生活物联网 AI 玩具演示平台</title>
+    <title>AI玩具演示平台</title>
   </head>
 
   <body>
